==> eboxmaker/eBox_Framework/ebox/hardware/cortex-m0/Peripherals/ebox_uart.cpp <==
#include "ebox_uart.h"
#include "ebox_mem.h"

void    Uart::begin(uint32_t baud_rate,uint8_t use_dma)
{
    Uart::begin(baud_rate,8,0,1,use_dma);
}

void Uart::begin(uint32_t baud_rate, uint8_t data_bit, uint8_t parity, float stop_bit,uint8_t use_dma)
{
    uint8_t             index;
	uint32_t _DataWidth;
	uint32_t _Parity;
	uint32_t _StopBits = 0;        
    rcc_clock_cmd((uint32_t)_USARTx,ENABLE);
    
#if USE_UART_DMA
    _use_dma = use_dma;
    switch((uint32_t)_USARTx)
    {
        
    #if USE_UART1
    case (uint32_t)USART1_BASE:
        dma_tx = &Dma1Ch2;
        index = NUM_UART1;
        break;
    #endif

    #if USE_UART2 
    case (uint32_t)USART2_BASE:
        dma_tx = &Dma1Ch4;
        index = NUM_UART2;
        break;
    #endif
    
    #if USE_UART3
    case (uint32_t)USART3_BASE:
        dma_tx = &Dma1Ch2;
        index = NUM_UART3;
        break;
    #endif

#if defined (STM32F10X_HD)
    #if USE_UART4
    case (uint32_t)UART4_BASE:
        index = NUM_UART4;
        break;
    #endif

    #if USE_UART5
    case (uint32_t)UART5_BASE:
        index = NUM_UART5;
        break;
    #endif
#endif
    }
#else
    switch((uint32_t)_USARTx)
    {
        
    #if USE_UART1
    case (uint32_t)USART1_BASE:
        index = NUM_UART1;
        break;
    #endif

    #if USE_UART2 
    case (uint32_t)USART2_BASE:
        index = NUM_UART2;
        break;
    #endif
    
    #if USE_UART3
    case (uint32_t)USART3_BASE:
        index = NUM_UART3;
        break;
    #endif

#if defined (STM32F10X_HD)
    #if USE_UART4
    case (uint32_t)UART4_BASE:
        index = NUM_UART4;
        break;
    #endif

    #if USE_UART5
    case (uint32_t)UART5_BASE:
        index = NUM_UART5;
        break;
    #endif
#endif
    }
#endif

    serial_irq_handler(index, Uart::_irq_handler, (uint32_t)this);
    
    switch(data_bit)
    {
    case 8:
        _DataWidth = LL_USART_DATAWIDTH_8B;
        break;
    case 9:
        _DataWidth = LL_USART_DATAWIDTH_9B;
        break;
    default :
        _DataWidth = LL_USART_DATAWIDTH_8B;
        break;
    }
    switch(parity)
    {
    case 0:
        _Parity = LL_USART_PARITY_NONE;
        break;
    case 1:
        _Parity = LL_USART_PARITY_EVEN;
        break;
    case 2:
        _Parity = LL_USART_PARITY_ODD;
        break;
    default :
        _Parity = LL_USART_PARITY_NONE;
        break;
    }

    if(stop_bit == 0.5)
		_StopBits = LL_USART_STOPBITS_0_5;
    else if(stop_bit == 1)
		_StopBits = LL_USART_STOPBITS_1;
    else if(stop_bit == 1.5)
		_StopBits = LL_USART_STOPBITS_2;
    else if(stop_bit == 2)
		_StopBits = LL_USART_STOPBITS_1_5;

    nvic(ENABLE,0,0);
    _rx_pin->mode(AF_PP_PU,LL_GPIO_AF_1);
    _tx_pin->mode(AF_PP_PU,LL_GPIO_AF_1);    
	LL_USART_SetTransferDirection(_USARTx, LL_USART_DIRECTION_TX_RX);
	LL_USART_ConfigCharacter(_USARTx, _DataWidth, _Parity, _StopBits);
	LL_USART_SetBaudRate(_USARTx, SystemCoreClock, LL_USART_OVERSAMPLING_16, baud_rate);
      //	禁止溢出检测
	LL_USART_DisableOverrunDetect(_USARTx);
	LL_USART_Enable(_USARTx);
	/* Polling USART initialisation */
	while ((!(LL_USART_IsActiveFlag_TEACK(_USARTx))) || (!(LL_USART_IsActiveFlag_REACK(_USARTx))))
	{
	}

#if USE_UART_DMA
    if((_USARTx == USART1 || _USARTx == USART2 || _USARTx == USART3) && (_use_dma == 1) )
    {
        LL_USART_EnableDMAReq_TX(_USARTx);
        dma_tx->rcc_enable();
        dma_tx->nvic(DISABLE,0,0);
        dma_tx->interrupt(DmaItTc,DISABLE);
        dma_tx->interrupt(DmaItTe,DISABLE);
        dma_tx->interrupt(DmaItHt,DISABLE);
    }
#endif
    
    interrupt(RxIrq,DISABLE);
    interrupt(TcIrq,DISABLE);
}

void Uart::nvic(FunctionalState enable, uint8_t preemption_priority, uint8_t sub_priority )
{
    nvic_dev_set_priority((uint32_t)_USARTx,0,0,0);
    if(enable != DISABLE)
        nvic_dev_enable((uint32_t)_USARTx,0);
    else
        nvic_dev_disable((uint32_t)_USARTx,0);
}

void Uart::interrupt(IrqType type, FunctionalState enable)
{

    if(type == RxIrq)
        LL_USART_EnableIT_RXNE(_USARTx);
    if(type == TcIrq)
    {
        LL_USART_EnableIT_TC(_USARTx);
    }
}

    void USART1_IRQHandler(void)
    {
        if(LL_USART_IsActiveFlag_RXNE(USART1) == SET)
        {
            irq_handler(serial_irq_ids[NUM_UART1],RxIrq);
            CLEAR_BIT(USART1->ISR,B10000);//强制清除
        }
        if(LL_USART_IsActiveFlag_TC(USART1) == SET)
        {
            busy[0] = 0;   
            irq_handler(serial_irq_ids[NUM_UART1],TcIrq);
            LL_USART_ClearFlag_TC(USART1);
        }        
    }

    void USART2_IRQHandler(void)
    {
        if(LL_USART_IsActiveFlag_RXNE(USART2) == SET)
        {
            irq_handler(serial_irq_ids[NUM_UART2],RxIrq);
            // 如果回调函数中没有读取数据，则将当前数据抛弃，准备下一次接收
			if (LL_USART_IsActiveFlag_RXNE(USART2) == SET )
			{
				LL_USART_RequestRxDataFlush(USART2);
			}
        }
        if(LL_USART_IsActiveFlag_TC(USART2) == SET)
        {
            busy[1] = 0;
            irq_handler(serial_irq_ids[NUM_UART2],TcIrq);
            // 清除发送结束中断标志
			LL_USART_ClearFlag_TC(USART2);
        }
    }

    void USART3_IRQHandler(void)
    {
        if(USART_GetITStatus(USART3, USART_IT_RXNE) == SET)
        {
            irq_handler(serial_irq_ids[NUM_UART3],RxIrq);
            USART_ClearITPendingBit(USART3, USART_IT_RXNE);
        }
        if(USART_GetITStatus(USART3, USART_IT_TC) == SET)
        {
            busy[2] = 0;
            irq_handler(serial_irq_ids[NUM_UART3],TcIrq);
            USART_ClearITPendingBit(USART3, USART_IT_TC);
        }
    }

    void UART4_IRQHandler(void)
    {
        if(USART_GetITStatus(UART4, USART_IT_RXNE) == SET)
        {
            irq_handler(serial_irq_ids[NUM_UART4],RxIrq);
            USART_ClearITPendingBit(UART4, USART_IT_RXNE);
        }
        if(USART_GetITStatus(UART4, USART_IT_TC) == SET)
        {
            busy[3] = 0;
            irq_handler(serial_irq_ids[NUM_UART4],TcIrq);
            USART_ClearITPendingBit(UART4, USART_IT_TC);
        }
    }

    void UART5_IRQHandler(void)
    {
        if(USART_GetITStatus(UART5, USART_IT_RXNE) == SET)
        {
            irq_handler(serial_irq_ids[NUM_UART5],RxIrq);
            USART_ClearITPendingBit(UART5, USART_IT_RXNE);
        }
        if(USART_GetITStatus(UART5, USART_IT_TC) == SET)
        {
            busy[4] = 0;
            irq_handler(serial_irq_ids[NUM_UART5],TcIrq);
            USART_ClearITPendingBit(UART5, USART_IT_TC);
        }
    }
